# epl-defense

./: .env  .gitignore  Makefile  README.md  env.sample  init_database.py  pyproject.toml  pytest.ini  run_tests.py
.cache/: budget.json
.cache/epl_cache/: 668bacd47004d0be.json  89f399d54de2a2cf.json  8fd3bac8687bed10.json  af28421399df1add.json  b122e81d8e49561b.json  dbcd1614fc8b3c9a.json  f53c30f247728ab1.json  redirects.sqlite
app/: config.py  main.py
app/api/: routes_defense.py  routes_fixtures.py  routes_ingestion.py  routes_leagues.py  routes_player_stats.py  routes_standings.py  routes_team_stats.py  routes_teams.py
app/db/: init_db.py  session.py
app/models/: __init__.py  base.py  fixture.py  league.py  player.py  team.py
app/schemas/: __init__.py  api_responses.py  league.py  team.py
app/services/: api_client.py  ingestion.py  player_sync_service.py
docs/: API_ENDPOINT_REFERENCE.md  API_RESPONSE_FORMAT.md  DEVELOPMENT_GUIDE.md
epl_defense/: __init__.py  api_client.py  cli.py  server.py
epl_defense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dev.sh  sync_players.py
tests/: conftest.py  test_fixtures.py  test_ingestion.py  test_leagues.py  test_player_stats.py  test_teams.py
